--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+    <title>UASS - Home</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -30,12 +31,13 @@
 					<li class="active"><a href="#">Home</a></li>
 					<li><a href="#">Page 1</a></li>
 					<li><a href="#">Page 2</a></li>
-					<li><a href="#">People</a></li>
+					<li><a href="students.html">Students</a></li>
 				</ul>
 			</div>
 		</div>
 	</nav>
     <section>
+    <div class="container-fluid">
         <div class="row">
             <div class="col-md-6">
                 <p>
@@ -46,8 +48,8 @@
             </div>
             <div class="col-md-6">HERE TOO</div>
         </div>
+    </div>
     </section>
-
 </body>
 
 </html>
