fix file extension

--- a/students.html
+++ b/students.html
@@ -22,8 +22,8 @@
 	<nav class="navbar navbar-inverse">
 		<div class="container-fluid">
 			<div class="navbar-header">
-				<a class="navbar-brand" href="#">
-                    <img id="brand-image" src="img/UASS_Logo_Big.png">
+				<a class="navbar-brand" href="#">UASS
+                    <!--<img id="brand-image" src="img/UASS_Logo_Big.png">-->
                         <!--<img alt="UASS" src="img/UASS_Logo.png" style="vertical-align:middle; width:75px;" />-->
 				</a>
 			</div>
@@ -90,7 +90,7 @@
                 <div class="panel-body">
                     <div class="row">
                         <div class="col-md-2">
-                            <img src="img/ZachK.png"  height="240" width="160" style="border:2px solid black">
+                            <img src="img/ZachK.png"  height="240" width="160" style="border:2px solid black" />
                         </div>
                         <div class="col-md-10">
                             <p>
