--- a/students.html
+++ b/students.html
@@ -90,7 +90,7 @@
                 <div class="panel-body">
                     <div class="row">
                         <div class="col-md-2">
-                            <img src="img/ZachK.png"  height="240" width="160" style="border:2px solid black" />
+                            <img src="img/ZachK.PNG"  height="240" width="160" style="border:2px solid black" />
                         </div>
                         <div class="col-md-10">
                             <p>
