--- a/students.html
+++ b/students.html
@@ -79,7 +79,23 @@
             </div>
             <div class="panel panel-default">
                 <div class="panel-heading">Sarah Hoffman</div>
-                <div class="panel-body"></div>
+                <div class="panel-body">
+                    <div class="row">
+                        <div class="col-md-4 center-box">
+                            <img src="img/SarahH.JPG"  height="270" width="222" style="border:2px solid black" />
+                        </div>
+                        <div class="col-md-8">
+                            <p>
+                            <br />
+                            Sarah Hoffman graduated from UAF with a Bachelor's of Science in Mechanical Engineering, 
+                            concentration in Aerospace and minor in Mathematics. She then joined the ACUASI team as 
+                            a temporary worker designing mechanical integration of payloads using CAD programs and a 
+                            3D printer. Harassed almost daily for a year by her supervisor, Dr Hatfield, she finally 
+                            decided to go back to school for a Master's degree.
+                            </p>
+                        </div>
+                    </div> 
+                </div>
             </div>
             <div class="panel panel-default">
                 <div class="panel-heading">Nathan Kingsland</div>
@@ -89,11 +105,12 @@
                 <div class="panel-heading">Zach Krehlik</div>
                 <div class="panel-body">
                     <div class="row">
-                        <div class="col-md-2">
-                            <img src="img/ZachK.PNG"  height="240" width="160" style="border:2px solid black" />
+                        <div class="col-md-4 center-box">
+                                <img src="img/ZachK.PNG"  height="240" width="160" style="border:2px solid black" />
                         </div>
-                        <div class="col-md-10">
+                        <div class="col-md-8">
                             <p>
+                            <br />
                             Zachary Krehlik is a god among men.  His prowess at a hockey rink is a thing of legends,
                             he turned down being picked in the first round of the 2006 NHL draft to pursue his 
                             interests elsewhere.  His fascination with electrical engineering STEMs from his late 
