--- a/students.html
+++ b/students.html
@@ -82,7 +82,7 @@
                 <div class="panel-body">
                     <div class="row">
                         <div class="col-md-4 center-box">
-                            <img src="img/SarahH.JPG"  height="270" width="222" style="border:2px solid black" />
+                            <img src="img/SarahH.jpg"  height="270" width="222" style="border:2px solid black" />
                         </div>
                         <div class="col-md-8">
                             <p>
