More bio's, font change, added logo

--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
 	<!-- jQuery -->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     
+    <!-- Open Sans Font -->
+    <link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
+    
     <!-- Style sheet -->
     <link rel="stylesheet" href="css/styles.css" />
 </head>
@@ -37,16 +40,19 @@
 		</div>
 	</nav>
     <section>
-    <div class="container-fluid">
+    <div class="container">
         <div class="row">
             <div class="col-md-6">
+                <img src="img/UASS_Logo_Big.png" width="100%">
+            </div>
+            <div class="col-md-6">
                 <p>
-                    Unmanned Aerial Systems Solutions, or UASS, is a student company formed
-                    for the Aerospace Systems Engineering class at UAF's College of Engineering
-                     and Mines.
+                <br />
+                Unmanned Aerial Systems Solutions, or UASS, is a student company formed
+                for the Aerospace Systems Engineering class at UAF's College of Engineering
+                and Mines.
                 </p>
             </div>
-            <div class="col-md-6">HERE TOO</div>
         </div>
     </div>
     </section>
