--- a/students.html
+++ b/students.html
@@ -14,6 +14,9 @@
 	<!-- jQuery -->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     
+    <!-- Open Sans Font -->
+    <link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
+    
     <!-- Style sheet -->
     <link rel="stylesheet" href="css/styles.css" />
 </head>
@@ -43,7 +46,38 @@
         <div class="panel-group">
             <div class="panel panel-default">
                 <div class="panel-heading">Clayton Auld</div>
-                <div class="panel-body"></div>
+                <div class="panel-body">
+                    <div class="row">
+                        <div class="col-md-4 center-box">
+                            <img src="img/students/"  height="270" width="222" style="border:2px solid black" />
+                        </div>
+                        <div class="col-md-8">
+                            <p>
+                            <br />
+                            Clayton serves as UASS’ Stalker Design Lead for the Stalker improvement effort. He is currently
+                            an undergraduate student in Electrical Engineering with a focus on Digital Electronics at the
+                            University of Alaska Fairbanks. His projected graduation date is May of 2016.
+                            <br />
+                            Clayton’s work experience extends into several subfields of Electrical Engineering, but he initially
+                            started his forays into the industry through hardware and software modification of computer systems 
+                            as a teenager in rural Wisconsin. Intensely inquisitive of all things electrical, he developed an
+                            understanding of computer systems at a fairly young age. He begin his college education focused
+                            on computer networking and security systems, but quickly realized his ambitions lie in hardware 
+                            research and design. A desire for adventure brought him to Alaska, and subsequently to the Fairbanks
+                            campus of the University of Alaska.
+                            <br />
+                            Clayton’s most recent work pertains to battery management systems in remotely operated robotic
+                            systems, and has developed proficiency at embedded systems hardware design. Remotely operated
+                            systems and sensor networks has always intrigued him, and is what brought him to UASS.
+                            <br />
+                            In his free time Clayton enjoys the recreation opportunities that Alaska has to offer and has
+                            recently developed a love for mountaineering and back-country skiing. When at home Clayton
+                            often researches his own ideas and challenges himself in electronics hardware design and computer
+                            system administration.
+                            </p>
+                        </div>
+                    </div>
+                </div>
             </div>
             <div class="panel panel-default">
                 <div class="panel-heading">Brandon Burgett</div>
@@ -51,7 +85,18 @@
             </div>
             <div class="panel panel-default">
                 <div class="panel-heading">Patrick Dewane</div>
-                <div class="panel-body"></div>
+                <div class="panel-body">
+                    <div class="row">
+                        <div class="col-md-4 center-box">
+                            <img src="img/students/PatrickD.jpg"  height="300.9" width="232.2" style="border:2px solid black" />
+                        </div>
+                        <div class="col-md-8">
+                            <p>
+                            <br />
+                            </p>
+                        </div>
+                    </div> 
+                </div>
             </div>
             <div class="panel panel-default">
                 <div class="panel-heading">Ryker Dial</div>
@@ -71,7 +116,30 @@
             </div>
             <div class="panel panel-default">
                 <div class="panel-heading">Logan Graves</div>
-                <div class="panel-body"></div>
+                <div class="panel-body">
+                    <div class="row">
+                        <div class="col-md-4 center-box">
+                            <img src="img/students/"  height="270" width="222" style="border:2px solid black" />
+                        </div>
+                        <div class="col-md-8">
+                            <p>
+                            <br />
+                            Logan serves as UASS’ Project Manager for the Stalker and S900 improvement effort. He is
+                            currently a Master’s student in Electrical Engineering and has a B.S. in Electrical Engineering
+                            with a focus on Communications from the University of Alaska Fairbanks.
+                            <br />
+                            He started working with the ACUASI 3 years ago, working with a team to produce a hexacopter
+                            based on the DJI S800 airframe to be introduced into ACUASI’s fleet of Unmanned Aerial Vehicles.
+                            The final product of that design is now called the Ptarmigan and has become a mainstay of
+                            ACUASI’s multi-rotor UAV fleet. Working at the Naval Research Labs in Washington D.C. he was
+                            involved in cutting edge UAV research and development.
+                            <br />
+                            In his free time Logan is an avid UAV hobbyist. He enjoys designing and building UAVs for personal
+                            use and is active with UAV hobby groups around town.
+                            </p>
+                        </div>
+                    </div>
+                </div>
             </div>
             <div class="panel panel-default">
                 <div class="panel-heading">Nathan Green</div>
@@ -82,7 +150,7 @@
                 <div class="panel-body">
                     <div class="row">
                         <div class="col-md-4 center-box">
-                            <img src="img/SarahH.jpg"  height="270" width="222" style="border:2px solid black" />
+                            <img src="img/students/SarahH.jpg"  height="270" width="222" style="border:2px solid black" />
                         </div>
                         <div class="col-md-8">
                             <p>
@@ -106,7 +174,7 @@
                 <div class="panel-body">
                     <div class="row">
                         <div class="col-md-4 center-box">
-                                <img src="img/ZachK.PNG"  height="240" width="160" style="border:2px solid black" />
+                                <img src="img/students/ZachK.PNG"  height="240" width="160" style="border:2px solid black" />
                         </div>
                         <div class="col-md-8">
                             <p>
@@ -133,11 +201,46 @@
             </div>
             <div class="panel panel-default">
                 <div class="panel-heading">Shoa Russell</div>
-                <div class="panel-body"></div>
+                <div class="panel-body">
+                    <div class="row">
+                        <div class="col-md-4 center-box">
+                            <img src="img/students/ShoaR.jpg"  height="256.8" width="167.8" style="border:2px solid black" />
+                        </div>
+                        <div class="col-md-8">
+                            <p>
+                            <br />
+                            </p>
+                        </div>
+                    </div> 
+                </div>
             </div>
             <div class="panel panel-default">
                 <div class="panel-heading">Patrick Steckman</div>
-                <div class="panel-body"></div>
+                <div class="panel-body">
+                    <div class="row">
+                        <div class="col-md-4 center-box">
+                                <img src="img/students/PatrickS.jpg"  height="266.083" width="193.5" style="border:2px solid black" />
+                        </div>
+                        <div class="col-md-8">
+                            <p>
+                            <br />
+                            Patrick serves as UASS’ S900 Design Lead for the S900 improvement effort. He is currently an 
+                            undergraduate student in Computer Engineering with a projected graduation date of May 2016.
+                            <br />
+                            Patrick’s experience with UAS begin while serving in the Army as an Imagery Analyst. He worked
+                            with both the Sky Warrior and Hunter platforms in Balad as well as the Joint Surveillance Target
+                            Attack Radar System (JSTARS) in Baghdad.
+                            <br />
+                            While attending college he was selected to join the Modern Blanket Toss project as an instructor,
+                            data manager and Geospatial Analyst. He is currently serving as data manager and Geospatial
+                            Analyst for the Geographic Information Network of Alaska (GINA) on campus.
+                            <br />
+                            Patrick is very interested in using UAS to perform mapping tasks and is an expert at integrating
+                            UAS generated data into existing GIS databases.
+                            </p>
+                        </div>
+                    </div>
+                </div>
             </div>
             <div class="panel panel-default">
                 <div class="panel-heading">Daniel Talbot</div>
