--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-6">
-                <img src="img/UASS_Logo_Big.png" width="100%">
+                <img src="img/UASS_Logo_Big.PNG" width="100%">
             </div>
             <div class="col-md-6">
                 <p>
