More pics and bios

--- a/students.html
+++ b/students.html
@@ -49,31 +49,23 @@
                 <div class="panel-body">
                     <div class="row">
                         <div class="col-md-4 center-box">
-                            <img src="img/students/"  height="270" width="222" style="border:2px solid black" />
+                            <img src="img/students/nopic.jpg"  height="270" width="222" style="border:2px solid black" />
                         </div>
                         <div class="col-md-8">
                             <p>
                             <br />
                             Clayton serves as UASS’ Stalker Design Lead for the Stalker improvement effort. He is currently
-                            an undergraduate student in Electrical Engineering with a focus on Digital Electronics at the
-                            University of Alaska Fairbanks. His projected graduation date is May of 2016.
-                            <br />
-                            Clayton’s work experience extends into several subfields of Electrical Engineering, but he initially
+                            an undergraduate student in Electrical Engineering with a focus on Digital Electronics at the 
+                            University of Alaska Fairbanks. His projected graduation date is May of 2017.
+                            <br /><br />                         
+                            Clayton’s work experience extends into several subfields of Electrical Engineering, but he initially 
                             started his forays into the industry through hardware and software modification of computer systems 
-                            as a teenager in rural Wisconsin. Intensely inquisitive of all things electrical, he developed an
-                            understanding of computer systems at a fairly young age. He begin his college education focused
-                            on computer networking and security systems, but quickly realized his ambitions lie in hardware 
-                            research and design. A desire for adventure brought him to Alaska, and subsequently to the Fairbanks
-                            campus of the University of Alaska.
-                            <br />
-                            Clayton’s most recent work pertains to battery management systems in remotely operated robotic
-                            systems, and has developed proficiency at embedded systems hardware design. Remotely operated
-                            systems and sensor networks has always intrigued him, and is what brought him to UASS.
-                            <br />
-                            In his free time Clayton enjoys the recreation opportunities that Alaska has to offer and has
-                            recently developed a love for mountaineering and back-country skiing. When at home Clayton
-                            often researches his own ideas and challenges himself in electronics hardware design and computer
-                            system administration.
+                            growing up in rural Wisconsin. Clayton’s most recent work pertains to battery management systems in remotely 
+                            operated robotic systems, and has developed proficiency at embedded systems hardware design.
+                            <br /><br />                            
+                            In his free time Clayton enjoys the recreation opportunities that Alaska has to offer and has recently 
+                            developed a love for mountaineering and back-country skiing.
+
                             </p>
                         </div>
                     </div>
@@ -81,7 +73,18 @@
             </div>
             <div class="panel panel-default">
                 <div class="panel-heading">Brandon Burgett</div>
-                <div class="panel-body"></div>
+                <div class="panel-body">
+                    <div class="row">
+                        <div class="col-md-4 center-box">
+                            <img src="img/students/nopic.jpg"  height="270" width="222" style="border:2px solid black" />
+                        </div>
+                        <div class="col-md-8">
+                            <p>
+                            <br />
+                            </p>
+                        </div>
+                    </div>
+                </div>
             </div>
             <div class="panel panel-default">
                 <div class="panel-heading">Patrick Dewane</div>
@@ -100,26 +103,70 @@
             </div>
             <div class="panel panel-default">
                 <div class="panel-heading">Ryker Dial</div>
-                <div class="panel-body"></div>
+                <div class="panel-body">
+                    <div class="row">
+                        <div class="col-md-4 center-box">
+                            <img src="img/students/nopic.jpg"  height="270" width="222" style="border:2px solid black" />
+                        </div>
+                        <div class="col-md-8">
+                            <p>
+                            <br />
+                            </p>
+                        </div>
+                    </div>
+                </div>
             </div>
             <div class="panel panel-default">
                 <div class="panel-heading">Dalton Ellingson</div>
-                <div class="panel-body"></div>
+                <div class="panel-body">
+                    <div class="row">
+                        <div class="col-md-4 center-box">
+                            <img src="img/students/nopic.jpg"  height="270" width="222" style="border:2px solid black" />
+                        </div>
+                        <div class="col-md-8">
+                            <p>
+                            <br />
+                            </p>
+                        </div>
+                    </div>
+                </div>
             </div>
             <div class="panel panel-default">
                 <div class="panel-heading">Paul Gill</div>
-                <div class="panel-body"></div>
+                <div class="panel-body">
+                    <div class="row">
+                        <div class="col-md-4 center-box">
+                            <img src="img/students/nopic.jpg"  height="270" width="222" style="border:2px solid black" />
+                        </div>
+                        <div class="col-md-8">
+                            <p>
+                            <br />
+                            </p>
+                        </div>
+                    </div>
+                </div>
             </div>
             <div class="panel panel-default">
                 <div class="panel-heading">Cody Gossel</div>
-                <div class="panel-body"></div>
+                <div class="panel-body">
+                    <div class="row">
+                        <div class="col-md-4 center-box">
+                            <img src="img/students/nopic.jpg"  height="270" width="222" style="border:2px solid black" />
+                        </div>
+                        <div class="col-md-8">
+                            <p>
+                            <br />
+                            </p>
+                        </div>
+                    </div>
+                </div>
             </div>
             <div class="panel panel-default">
                 <div class="panel-heading">Logan Graves</div>
                 <div class="panel-body">
                     <div class="row">
                         <div class="col-md-4 center-box">
-                            <img src="img/students/"  height="270" width="222" style="border:2px solid black" />
+                            <img src="img/students/nopic.jpg"  height="270" width="222" style="border:2px solid black" />
                         </div>
                         <div class="col-md-8">
                             <p>
@@ -127,13 +174,13 @@
                             Logan serves as UASS’ Project Manager for the Stalker and S900 improvement effort. He is
                             currently a Master’s student in Electrical Engineering and has a B.S. in Electrical Engineering
                             with a focus on Communications from the University of Alaska Fairbanks.
-                            <br />
+                            <br /><br />
                             He started working with the ACUASI 3 years ago, working with a team to produce a hexacopter
                             based on the DJI S800 airframe to be introduced into ACUASI’s fleet of Unmanned Aerial Vehicles.
                             The final product of that design is now called the Ptarmigan and has become a mainstay of
                             ACUASI’s multi-rotor UAV fleet. Working at the Naval Research Labs in Washington D.C. he was
                             involved in cutting edge UAV research and development.
-                            <br />
+                            <br /><br />
                             In his free time Logan is an avid UAV hobbyist. He enjoys designing and building UAVs for personal
                             use and is active with UAV hobby groups around town.
                             </p>
@@ -143,7 +190,18 @@
             </div>
             <div class="panel panel-default">
                 <div class="panel-heading">Nathan Green</div>
-                <div class="panel-body"></div>
+                <div class="panel-body">
+                    <div class="row">
+                        <div class="col-md-4 center-box">
+                            <img src="img/students/nopic.jpg"  height="270" width="222" style="border:2px solid black" />
+                        </div>
+                        <div class="col-md-8">
+                            <p>
+                            <br />
+                            </p>
+                        </div>
+                    </div>
+                </div>
             </div>
             <div class="panel panel-default">
                 <div class="panel-heading">Sarah Hoffman</div>
@@ -167,7 +225,18 @@
             </div>
             <div class="panel panel-default">
                 <div class="panel-heading">Nathan Kingsland</div>
-                <div class="panel-body"></div>
+                <div class="panel-body">
+                    <div class="row">
+                        <div class="col-md-4 center-box">
+                            <img src="img/students/nopic.jpg"  height="270" width="222" style="border:2px solid black" />
+                        </div>
+                        <div class="col-md-8">
+                            <p>
+                            <br />
+                            </p>
+                        </div>
+                    </div>
+                </div>
             </div>
             <div class="panel panel-default">
                 <div class="panel-heading">Zach Krehlik</div>
@@ -226,15 +295,15 @@
                             <br />
                             Patrick serves as UASS’ S900 Design Lead for the S900 improvement effort. He is currently an 
                             undergraduate student in Computer Engineering with a projected graduation date of May 2016.
-                            <br />
+                            <br /><br />
                             Patrick’s experience with UAS begin while serving in the Army as an Imagery Analyst. He worked
                             with both the Sky Warrior and Hunter platforms in Balad as well as the Joint Surveillance Target
                             Attack Radar System (JSTARS) in Baghdad.
-                            <br />
+                            <br /><br />
                             While attending college he was selected to join the Modern Blanket Toss project as an instructor,
                             data manager and Geospatial Analyst. He is currently serving as data manager and Geospatial
                             Analyst for the Geographic Information Network of Alaska (GINA) on campus.
-                            <br />
+                            <br /><br />
                             Patrick is very interested in using UAS to perform mapping tasks and is an expert at integrating
                             UAS generated data into existing GIS databases.
                             </p>
@@ -244,11 +313,33 @@
             </div>
             <div class="panel panel-default">
                 <div class="panel-heading">Daniel Talbot</div>
-                <div class="panel-body"></div>
+                <div class="panel-body">
+                    <div class="row">
+                        <div class="col-md-4 center-box">
+                            <img src="img/students/nopic.jpg"  height="270" width="222" style="border:2px solid black" />
+                        </div>
+                        <div class="col-md-8">
+                            <p>
+                            <br />
+                            </p>
+                        </div>
+                    </div>
+                </div>
             </div>
             <div class="panel panel-default">
                 <div class="panel-heading">Bharath Veeravalli</div>
-                <div class="panel-body"></div>
+                <div class="panel-body">
+                    <div class="row">
+                        <div class="col-md-4 center-box">
+                            <img src="img/students/BharathV.jpg"  height="224" width="192.5" style="border:2px solid black" />
+                        </div>
+                        <div class="col-md-8">
+                            <p>
+                            <br />
+                            </p>
+                        </div>
+                    </div>
+                </div>
             </div>            
         </div>
     </div>
