--- a/students.html
+++ b/students.html
@@ -106,7 +106,7 @@
                 <div class="panel-body">
                     <div class="row">
                         <div class="col-md-4 center-box">
-                            <img src="img/students/nopic.jpg"  height="270" width="222" style="border:2px solid black" />
+                            <img src="img/students/RykerD.jpg"  height="250" width="175.75" style="border:2px solid black" />
                         </div>
                         <div class="col-md-8">
                             <p>
@@ -243,7 +243,7 @@
                 <div class="panel-body">
                     <div class="row">
                         <div class="col-md-4 center-box">
-                                <img src="img/students/ZachK.PNG"  height="240" width="160" style="border:2px solid black" />
+                                <img src="img/students/ZachK.jpg"  height="240" width="160" style="border:2px solid black" />
                         </div>
                         <div class="col-md-8">
                             <p>
@@ -278,6 +278,17 @@
                         <div class="col-md-8">
                             <p>
                             <br />
+                            <!--
+                            Shoa Russel got her undergratuate degree at FSU. While there, she worked on a number of interesting projects.
+                            For her senior design project, she lead a team that modified MIT's tin-can radar to measure the wing beat frequency of bird wings.
+                            She also built a simple robotic hand controlled with an Arduino Uno and flex potentiometers. 
+                            
+                            Shoa Russell to college at FSU and was on the deans honors list my last two semesters there. 
+                            Projects include:
+                            Being the project lead for my Tin-Can Radar Senior design project in which we modified MITs tin-can radar design and worked with Detect to see if we could see the wing beat frequency of birds wings using the radar. 
+                            Also build a simple robotic made from scratch using an Arduino Uno and flex potentiometers to mimic the movements of a gloved hand. 
+                            And my favorite, built a video game in VHDL and displayed it using VGA, the game included multiple lives, levels, and characters. The "enemy" character looked oddly similar to my teacher at the time. ;) 
+-->
                             </p>
                         </div>
                     </div> 
