--- a/students.html
+++ b/students.html
@@ -228,7 +228,7 @@
                 <div class="panel-body">
                     <div class="row">
                         <div class="col-md-4 center-box">
-                            <img src="img/students/nopic.jpg"  height="270" width="222" style="border:2px solid black" />
+                            <img src="img/students/NathanK.jpg"  height="250" width="187.5" style="border:2px solid black" />
                         </div>
                         <div class="col-md-8">
                             <p>
