Bootstrap dropdown test

--- a/index.html
+++ b/index.html
@@ -32,8 +32,13 @@
 			<div>
 				<ul class="nav navbar-nav">
 					<li class="active"><a href="#">Home</a></li>
-					<li><a href="#">Page 1</a></li>
-					<li><a href="#">Page 2</a></li>
+					<li class="dropdown">
+                        <a class="dropdown-toggle" data-toggle="dropdown" href="#">Documentation <span class="caret"></span></a>
+                        <ul class="dropdown-menu">
+                            <li><a href="#">Proposal</a></li>
+                        </ul>
+                    </li>
+					<li><a href="#">Media</a></li>
 					<li><a href="students.html">Students</a></li>
 				</ul>
 			</div>
