More pics, words, and row padding

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 	<nav class="navbar navbar-inverse">
 		<div class="container-fluid">
 			<div class="navbar-header">
-				<a class="navbar-brand" href="index.html">UASS</a>
+				<a class="navbar-brand" href="#">UASS</a>
 			</div>
 			<div>
 				<ul class="nav navbar-nav">
@@ -47,15 +47,32 @@
     <div class="container">
         <div class="row">
             <div class="col-md-6">
-                <img src="img/UASS_Logo_Big.PNG" width="100%">
+                <img src="img/UASS_Logo_Big.PNG" width="100%" />
             </div>
             <div class="col-md-6">
                 <p>
                 <br />
                 Unmanned Aerial Systems Solutions, or UASS, is a student company formed
                 for the Aerospace Systems Engineering class at UAF's College of Engineering
-                and Mines.
+                and Mines. UASS is tasked with upgrading two existing UAS platforms: the
+                Lockheed Martin Stalker (a fixed wing UAS) and the DJI S900 (a multirotor
+                UAS). These systems are being upgraded for use by 
+                <a href="acuasi.alaska.edu">ACUASI</a> in their field operations.
                 </p>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-6">
+                <figure>
+                    <img src = "img/LM_Stalker.jpg" width="100%" />
+                    <figcaption style="text-align:center">Lockheed Martin Stalker</figcaption>
+                </figure>
+            </div>
+            <div class="col-md-6">
+                <figure>
+                    <img src = "img/DJI_S900.jpg" width="100%" />
+                    <figcaption style="text-align:center">DJI S900</figcaption>
+                </figure>
             </div>
         </div>
     </div>
