More bios and pics

--- a/students.html
+++ b/students.html
@@ -194,11 +194,17 @@
                 <div class="panel-body">
                     <div class="row">
                         <div class="col-md-4 center-box">
-                            <img src="img/students/nopic.jpg"  height="270" width="222" style="border:2px solid black" />
+                            <img src="img/students/NathanG.jpg"  height="240" width="180" style="border:2px solid black" />
                         </div>
                         <div class="col-md-8">
                             <p>
                             <br />
+                            Nathan Green was born and raised California. He has a bachelor's degree in Applied Physics 
+                            from the University of California Santa Cruz. After graduating he worked for a small start 
+                            up company researching researching and designing novel testing methods and solar concentration 
+                            designs for photovoltaics. After moving to Alaska he started a master's program in Electrical 
+                            Engineering with an emphasis in Power and Controls. Nathan enjoys a wide breadth of activities 
+                            ranging from camping and hiking to playing board games.
                             </p>
                         </div>
                     </div>
