--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
 </head>
 
 <body>
-	<nav class="navbar navbar-inverse">
+    <!--#include file="navbar.html"-->
+	<!--<nav class="navbar navbar-inverse">
 		<div class="container-fluid">
 			<div class="navbar-header">
 				<a class="navbar-brand" href="#">UASS</a>
@@ -30,53 +31,64 @@
 				<ul class="nav navbar-nav">
 					<li class="active"><a href="#">Home</a></li>
 					<li class="dropdown">
-                        <a class="dropdown-toggle" data-toggle="dropdown" href="#">Documentation <span class="caret"></span></a>
+                        <a class="dropdown-toggle" data-toggle="dropdown" href="#">Documentation<span class="caret"></span></a>
                         <ul class="dropdown-menu">
                             <li><a href="docs/Proposal_Final.pdf">Proposal</a></li>
                         </ul>
                     </li>
-					<li><a href="#">Media</a></li>
+					<li class="dropdown">
+                        <a class="dropdown-toggle" data-toggle="dropdown" href="#">Media<span class="caret"></span></a>
+                        <ul class="dropdown-menu">
+                            <li><a href="flyinginfield.html">Flying in the Field</a></li>
+                        </ul>
+                    </li>
 					<li><a href="students.html">Students</a></li>
 				</ul>
                 
 			</div>
 		</div>
-	</nav>
-
-   <section>
-    <div class="container">
-        <div class="row">
-            <div class="col-md-6">
-                <img src="img/UASS_Logo_Big.PNG" width="100%" />
+	</nav>-->
+    <section>
+        <div class="container" id="content">
+            <div class="row">
+                <div class="col-md-6">
+                    <img src="img/UASS_Logo_Big.PNG" width="100%" />
+                </div>
+                <div class="col-md-6">
+                    <p>
+                    <br />
+                    Unmanned Aerial Systems Solutions, or UASS, is a student company formed
+                    for the Aerospace Systems Engineering class at UAF's College of Engineering
+                    and Mines. UASS is tasked with upgrading two existing UAS platforms: the
+                    Lockheed Martin Stalker (a fixed wing UAS) and the DJI S900 (a multirotor
+                    UAS). These systems are being upgraded for use by 
+                    <a href="acuasi.alaska.edu">ACUASI</a> in their field operations.
+                    </p>
+                </div>
             </div>
-            <div class="col-md-6">
-                <p>
-                <br />
-                Unmanned Aerial Systems Solutions, or UASS, is a student company formed
-                for the Aerospace Systems Engineering class at UAF's College of Engineering
-                and Mines. UASS is tasked with upgrading two existing UAS platforms: the
-                Lockheed Martin Stalker (a fixed wing UAS) and the DJI S900 (a multirotor
-                UAS). These systems are being upgraded for use by 
-                <a href="acuasi.alaska.edu">ACUASI</a> in their field operations.
-                </p>
+            <div class="row">
+                <div class="col-md-6">
+                    <figure>
+                        <img src = "img/LM_Stalker.jpg" width="100%" />
+                        <figcaption style="text-align:center">Lockheed Martin Stalker</figcaption>
+                    </figure>
+                </div>
+                <div class="col-md-6">
+                    <figure>
+                        <img src = "img/DJI_S900.jpg" width="100%" />
+                        <figcaption style="text-align:center">DJI S900</figcaption>
+                    </figure>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-12 center-box">
+                    <figure>
+                        <img src = "img/Saturday_Outing.jpg" />
+                        <figcaption style="text-align:center">UASS Team Flying in the Snow</figcaption>
+                    </figure>
+                </div>
             </div>
         </div>
-        <div class="row">
-            <div class="col-md-6">
-                <figure>
-                    <img src = "img/LM_Stalker.jpg" width="100%" />
-                    <figcaption style="text-align:center">Lockheed Martin Stalker</figcaption>
-                </figure>
-            </div>
-            <div class="col-md-6">
-                <figure>
-                    <img src = "img/DJI_S900.jpg" width="100%" />
-                    <figcaption style="text-align:center">DJI S900</figcaption>
-                </figure>
-            </div>
-        </div>
-    </div>
     </section>
 </body>
-
 </html>
