try to include navbar

--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
     <link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css' />
     
     <!-- Style sheet -->
-    <link rel="stylesheet" href="css/styles.css" />
+    <link rel="stylesheet" href="/css/styles.css" />
 </head>
 
 <body>
-    <!--#include file="navbar.html"-->
+    {% include navbar.html %}
 	<!--<nav class="navbar navbar-inverse">
 		<div class="container-fluid">
 			<div class="navbar-header">
