Testing JQuery to load navbar

--- a/students.html
+++ b/students.html
@@ -132,7 +132,7 @@
                     </div>
                 </div>
             </div>
-            <div class="panel panel-default">
+            <!--<div class="panel panel-default">
                 <div class="panel-heading">Paul Gill</div>
                 <div class="panel-body">
                     <div class="row">
@@ -146,7 +146,7 @@
                         </div>
                     </div>
                 </div>
-            </div>
+            </div>-->
             <div class="panel panel-default">
                 <div class="panel-heading">Cody Gossel</div>
                 <div class="panel-body">
