--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 </head>
 
 <body>
-	<nav class="navbar navbar-inverse">
+	<!--<nav class="navbar navbar-inverse">
 		<div class="container-fluid">
 			<div class="navbar-header">
 				<a class="navbar-brand" href="#">UASS</a>
@@ -47,7 +47,12 @@
                 
 			</div>
 		</div>
-	</nav>
+	</nav>-->
+    <div id="navbar">
+    </div>
+    <script>
+        $( "#navbar" ).load("/navbar.html" );
+    </script>
     <section>
         <div class="container" id="content">
             <div class="row">
