--- a/navbar.html
+++ b/navbar.html
@@ -1,3 +1,4 @@
+<body>
 <nav class="navbar navbar-inverse">
 		<div class="container-fluid">
 			<div class="navbar-header">
@@ -24,3 +25,4 @@
 			</div>
 		</div>
 	</nav>
+    </body>
