--- a/students.html
+++ b/students.html
@@ -21,27 +21,11 @@
 </head>
 
 <body>
-	<nav class="navbar navbar-inverse">
-		<div class="container-fluid">
-			<div class="navbar-header">
-				<a class="navbar-brand" href="index.html">UASS</a>
-			</div>
-			<div>
-				<ul class="nav navbar-nav">
-					<li><a href="index.html">Home</a></li>
-					<li class="dropdown">
-                        <a class="dropdown-toggle" data-toggle="dropdown" href="#">Documentation <span class="caret"></span></a>
-                        <ul class="dropdown-menu">
-                            <li><a href="docs/Proposal_Final.pdf">Proposal</a></li>
-                        </ul>
-                    </li>
-					<li><a href="#">Media</a></li>
-					<li class="active"><a href="#">Students</a></li>
-				</ul>
-                
-			</div>
-		</div>
-	</nav>
+	<div id="navbar">
+    </div>
+    <script>
+        $( "#navbar" ).load("/navbar.html" );
+    </script>
     
     <section>
     <div class="container">
