--- a/navbar.html
+++ b/navbar.html
@@ -15,7 +15,7 @@
                 <li class="dropdown">
                     <a class="dropdown-toggle" data-toggle="dropdown" href="#">Media<span class="caret"></span></a>
                     <ul class="dropdown-menu">
-                        <li><a href="/mediaflyinginfield.html">Flying in the Field</a></li>
+                        <li><a href="/media/flyinginfield.html">Flying in the Field</a></li>
                     </ul>
                 </li>
                 <li><a href="/students.html">Students</a></li>
